Fixed issues with navigation on mobile
- Added custom Dropdown directive
- Optimised header css

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -62,6 +62,7 @@
     display: block;
     padding: 20px 10px;
     margin: 0 10px;
+    cursor: pointer;
 }
 
 .logged-user a {
@@ -154,7 +155,7 @@
         background: rgba(0, 0, 0, 0.1);
     }
 
-    .menu:not(:hover)>.menu-dropdown>* {
+    .hidden>.menu-dropdown>* {
         visibility: hidden;
         height: 0;
         padding-top: 0;
@@ -168,5 +169,6 @@
             0.3s color,
             0.6s visibility;
         z-index: 99;
+        border-bottom: none;
     }
 }
